force-app/main/default/objects/FE_Intake_Idea__c/FE_Intake_Idea__c.object-meta.xml
<CustomObject>
    <description>FE Intake - This object holds the sustainability project ideas requested by users</description>
    <label>Intake Idea</label>
    <nameField>
        <displayFormat>{YY}-{00000}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>