force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Brk_Even_Quant__c.field-meta.xml
<CustomField>
    <fullName>FE_Brk_Even_Quant__c</fullName>
    <description>break-even quantity for the idea</description>
    <label>Break-Even Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>