force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Brk_Even_Time__c.field-meta.xml
<CustomField>
    <fullName>FE_Brk_Even_Time__c</fullName>
    <description>break-even time for the idea</description>
    <label>Break-Even Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>