force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Category__c.field-meta.xml
<CustomField>
    <fullName>FE_Category__c</fullName>
    <inlineHelpText>Which area of our business will be most positively impacted?</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>