force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Email__c.field-meta.xml
<CustomField>
    <fullName>FE_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>