force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Fst_Yr_Savings__c.field-meta.xml
<CustomField>
    <fullName>FE_Fst_Yr_Savings__c</fullName>
    <description>Dollar value of savings expected in the first year if the idea is implemented</description>
    <label>First Year Savings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>