force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Impl_Timing__c.field-meta.xml
<CustomField>
    <fullName>FE_Impl_Timing__c</fullName>
    <description>Time required for implementation of the idea</description>
    <inlineHelpText>Time in Days</inlineHelpText>
    <label>Implementation Timing</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>