force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Implementation__c.field-meta.xml
<CustomField>
    <fullName>FE_Implementation__c</fullName>
    <description>how the idea should be implemented</description>
    <inlineHelpText>Provide any useful information regarding Implementation.</inlineHelpText>
    <label>Implementation</label>
    <length>750</length>
    <type>Html</type>
</CustomField>