force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Invstmnt__c.field-meta.xml
<CustomField>
    <fullName>FE_Invstmnt__c</fullName>
    <description>Dollar value of investment required to implement the idea</description>
    <label>Investment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>