force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_IRR__c.field-meta.xml
<CustomField>
    <fullName>FE_IRR__c</fullName>
    <description>IRR percentage for the idea</description>
    <label>IRR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>