force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_NPV__c.field-meta.xml
<CustomField>
    <fullName>FE_NPV__c</fullName>
    <description>Dollar value of NPV for the idea</description>
    <label>NPV</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>