force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>FE_Opportunity__c</fullName>
    <description>so users understand the meaning of â€œOpportunityâ€�</description>
    <inlineHelpText>How will this solution benefit Coca-Cola?</inlineHelpText>
    <label>Opportunity</label>
    <length>750</length>
    <type>Html</type>
</CustomField>