force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Platform__c.field-meta.xml
<CustomField>
    <fullName>FE_Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FS3100</fullName>
            </value>
            <value>
                <fullName>FS7000</fullName>
            </value>
            <value>
                <fullName>FS8000</fullName>
            </value>
            <value>
                <fullName>FS9000</fullName>
            </value>
            <value>
                <fullName>FS9100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>