force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Problem__c.field-meta.xml
<CustomField>
    <fullName>FE_Problem__c</fullName>
    <description>Provides details of the problem</description>
    <inlineHelpText>Succinct description of the problem which this idea will solve</inlineHelpText>
    <label>Problem</label>
    <length>750</length>
    <type>Html</type>
</CustomField>