force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Solution__c.field-meta.xml
<CustomField>
    <fullName>FE_Solution__c</fullName>
    <description>so users understand how to describe their idea.</description>
    <inlineHelpText>Succinct description of how the idea will solve the problem</inlineHelpText>
    <label>Solution</label>
    <length>750</length>
    <type>Html</type>
</CustomField>