force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Status__c.field-meta.xml
<CustomField>
    <fullName>FE_Status__c</fullName>
    <description>Status of the idea</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Accepted for further review</fullName>
            </value>
            <value>
                <fullName>Reviewed by Steering Committee</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>