force-app/main/default/objects/FE_Intake_Idea__c/fields/FE_Title__c.field-meta.xml
<CustomField>
    <fullName>FE_Title__c</fullName>
    <description>Short description of the Idea</description>
    <label>Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>