force-app/main/default/objects/FE_Intake_Idea__c/listViews/All_Ideas.listView-meta.xml
<ListView>
    <fullName>All_Ideas</fullName>
    <columns>NAME</columns>
    <columns>FE_Title__c</columns>
    <columns>FE_Platform__c</columns>
    <columns>FE_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Ideas</label>
</ListView>