force-app/main/default/objects/FE_Intake_Idea__c/listViews/FE_Intake_Steering_Committee_FE_Intake_Idea.listView-meta.xml
<ListView>
    <fullName>FE_Intake_Steering_Committee_FE_Intake_Idea</fullName>
    <filterScope>Queue</filterScope>
    <label>Freestyle Intake Steering Committee</label>
    <queue>FE_Intake_Steering_Comt_Grp</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>