force-app/main/default/objects/FE_Intake_Idea__c/listViews/Freestyle_Intake_Platform_Owner_FE_Intake_Idea.listView-meta.xml
<ListView>
    <fullName>Freestyle_Intake_Platform_Owner_FE_Intake_Idea</fullName>
    <filterScope>Queue</filterScope>
    <label>Freestyle Intake Platform Owner</label>
    <queue>Freestyle_Intake_Platform_Owner</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>